# arch-spike

./: .env-example  .gitignore  alembic.ini  check.py  conftest.py  docker-compose.yml  pyproject.toml  tach.toml  tach_module_graph.mmd
frontend/: package-lock.json
frontend/src/: App.css  App.jsx  index.css
frontend/src/api/: client.js
frontend/src/components/coaches/: CoachCard.jsx  CoachesTab.jsx  CreateCoachModal.jsx
frontend/src/components/members/: CreateMemberModal.jsx  MemberCard.jsx  MemberDetailModal.jsx  MembersTab.jsx
frontend/src/components/plans/: PlansTab.jsx  SessionEditor.jsx
frontend/src/components/ui/: Badge.jsx  DatePicker.css  DatePicker.jsx  Modal.css  Modal.jsx  ProgressRing.jsx  Spinner.jsx  StatCard.jsx  Toast.css  Toast.jsx
frontend/src/contexts/: ToastContext.jsx
frontend/src/hooks/: useAsync.js
load_tests/: load_test.js
