[project]
name = "project-spike"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "domain",
    "infrastructure",
    "application",
    "bootstrap",
    "api",
    "worker",
    "pydantic>=2",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "testcontainers[postgres,redis]>=4.0",
    "httpx>=0.27",
    "pyright>=1.1.408",
    "ruff>=0.15.4",
]

[tool.uv.workspace]
members = [
    "packages/domain",
    "packages/infrastructure",
    "packages/application",
    "packages/bootstrap",
    "packages/api",
    "packages/worker",
]

[tool.uv.sources]
domain = { workspace = true }
infrastructure = { workspace = true }
application = { workspace = true }
bootstrap = { workspace = true }
api = { workspace = true }
worker = { workspace = true }

[tool.pyright]
pythonVersion = "3.12"
pythonPlatform = "All"
typeCheckingMode = "strict"
venvPath = "."
venv = ".venv"
extraPaths = [
    "packages/domain/src",
    "packages/application/src",
    "packages/infrastructure/src",
    "packages/bootstrap/src",
    "packages/api/src",
    "packages/worker/src",
]
include = [
    "packages/domain/src",
    "packages/application/src",
    "packages/infrastructure/src",
    "packages/bootstrap/src",
    "packages/api/src",
    "packages/worker/src",
]
exclude = [
    "**/tests/**",
    "conftest.py",
]
# Biblioteki bez typed stubs (testcontainers, dependency-injector, taskiq, itp.)
reportMissingTypeStubs = false
reportMissingModuleSource = false
# Nasze wymuszenia
reportImplicitOverride = "error"

[tool.ruff]
target-version = "py312"
src = ["packages/*/src"]
line-length = 140

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "UP",   # pyupgrade — enforces Python 3.12+ syntax
    "I",    # isort
    "FURB", # refurb — modernization
    "RUF",  # ruff-specific rules
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_test_loop_scope = "session"
asyncio_default_fixture_loop_scope = "session"
testpaths = [
    "packages/domain/tests",
    "packages/infrastructure/tests",
    "packages/application/tests",
    "packages/api/tests",
]
